<resources>
    <string name="app_name">Oil Note</string>
    <string name="name">OilNote</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="loading">Cargando datos...</string>
    <string name="checking">Comprobando datos...</string>
    <string name="user_register">"Registrado usuario..."</string>
    <string name="change_password">"Cambiando contraseña..."</string>
    <string name="save">Guardando...</string>
    <string name="options">Opciones</string>
    <string name="add_data">Añade datos</string>
    <string name="list">Listas de datos</string>
    <string name="settings">Ajustes</string>
    <string name="close">Cerrar Sesion</string>
    <string name="cancel">Cancelar</string>
    <string name="remove">Eliminando...</string>
    <string name="server_down">El servidor se encuentra en mantenimiento, sentimos las molestias.</string>
    <string name="add_worker">"Añadir trabajador"</string>
    <string name="add_jornal">Añadir jornal</string>
    <string name="add_plot">Añadir parcela</string>
    <string name="add_weigth">Añadir pesaje</string>
    <string name="add_remove">Eliminar</string>
    <string name="add">Añadir</string>
    <string name="nick">Apodo</string>
    <string name="_name">Nombre</string>
    <string name="_edit">Editar</string>
    <string name="phone">Teléfono</string>
    <string name="acept">Aceptar</string>
    <string name="discard">SALIR</string>
    <string name="_save">GUARDAR</string>
    <string name="filter">Filtros</string>
    <string name="for_name">Por nombre</string>
    <string name="for_date">Por fecha</string>
    <string name="date_from">Desde la fecha</string>
    <string name="date_to">Hasta la fecha</string>
    <string name="date_to_date">De fecha a fecha</string>
    <string name="select_date">Selecciona una fecha</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btn_enter">Entrar</string>
    <string name="tv_registration">¿No tienes cuenta aún? Create una</string>
    <string name="login_fail">El usuario no existe o la contraseña es incorrecta</string>
    <string name="emptry_camp">Este campo no puede estar vacio</string>
    <string name="distinc_camp">Las contraseñas no coinciden</string>
    <string name="error_password">La contraseña debe de contener al menos 6 caracteres</string>
    <string name="equals_password">La contraseña nueva debe de ser diferente a la anterior</string>
    <string name="error_old_password">La contraseña no coincide con la que hay actualmente</string>
    <string name="total">Total: </string>
    <string name="benefits">Beneficios</string>
    <string name="marginbenefits">Margen de beneficios</string>
    <string name="prec">Aceite €/1L: </string>
    <string name="calendar">Calendario</string>
    <string name="fast_access">Acceso rápido</string>
    <string name="general_info">Información general</string>
    <string name="tree">Olivas</string>
    <string name="worker_list">Lista de trabajadores</string>
    <string name="add_expense">Añadir gasto</string>
    <string name="btn_registration">Crear cuenta</string>
    <string name="tv_login">¿Ya eres usuario? Iniciar sesión</string>
    <string name="mail">Correo</string>
    <string name="error_mail">La dirección de correo no es correcta.
                                        \n\t\tEjem: tu_correo@gmail.com
                                        \n\t\tEjem: tu_correo@megasur.es
                                        \n\t\tEjem: tu_correo@hotmail.es
                                        \n\t\tEtc...
    </string>
    <string name="email_exist">Este correo ya está registrado</string>
    <string name="user_exist">Este usuario ya se encuentra en uso</string>
    <string name="error_user">El usuario debe de contener al menos 4 caracteres</string>
    <string name="successful_registration">Usuario registrado exitosamente</string>
    <string name="error_registration">Fallo en el registro del usuario</string>
    <string name="successful_change">La contraseña a sido cambiada exitosamente</string>
    <string name="error_change">Fallo en cambio de contraseña</string>
    <string name="add_laborer">Añadir trabajador</string>
    <string name="add_worker_day">Añadir jornales</string>
    <string name="title_activity_list_worker">ListWorkerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Opciones</string>
    <string name="home">Inicio</string>
    <string name="list_worker">Trabajadores</string>
    <string name="list_jornal">Jornales</string>
    <string name="list_jornal_missing">Jornales perdidos</string>
    <string name="list_plot">Parcelas</string>
    <string name="list_weight">Pesajes</string>
    <string name="date">Fecha</string>
    <string name="weight">Peso</string>
    <string name="_efficiency">Indique el rendimiento</string>
    <string name="efficiency">Rendimiento</string>
    <string name="preferences">Preferencias</string>
    <string name="profile">Perfil</string>
    <string name="summary_profile">Edita los detalles de tu perfil</string>
    <string name="acount">Cuenta</string>
    <string name="summary_acount">Cambia tu contraseña</string>
    <string name="notification">Notificaciones</string>
    <string name="summary_notification">Activa o desactiva las notificaciones</string>
    <string name="segurity">Seguridad</string>
    <string name="change_pass">Cambia tu contraseña</string>
    <string name="type_jornal">Tipo jornales</string>
    <string name="change_jornal">Administa el tipo de jornal a pagar</string>
    <string name="auto_login">Logueo automatico</string>
    <string name="change_auto_login">Activa o desactiva el logueo automático</string>
    <string name="old_pass">Contraseña actual</string>
    <string name="new_pass">Contraseña nueva</string>
    <string name="comfir_pass">Comfirmar contraseña</string>
    <string name="asaja">"Asaja"</string>
    <string name="seis_quince">"6 horas y 15 minutos"</string>
    <string name="seis_treinta">"6 horas y 30 minutos"</string>
    <string name="siete_descanso">"7 horas con descanso</string>
    <string name="siete">"7 horas"</string>
    <string name="custom">"Personalizado"</string>
    <string name="cant">"Cuantia (€)"</string>
    <string name="custom_text">"Crea un jornal personalizado"</string>
    <string name="successful_add_type_jornal">El tipo de jornal fue añadido con exito</string>
    <string name="error_add_type_jornal">El tipo de jornal no fue añadido con exito</string>
    <string name="worker">"Trabajador"</string>
    <string name="workers">"Trabajadores"</string>
    <string name="salary">"Salario"</string>
    <string name="successful_remove_worker">El trabajador fue elimidado con exito</string>
    <string name="error_remove_worker">El trabajador fue no elimidado con exito</string>
    <string name="are_sure_worker">¿Está seguro de que desea borrar a este trabajador?</string>
    <string name="from_camera">Desde cámara</string>
    <string name="from_galery">Desde galería</string>
    <string name="permissions_acepted">Permisos aceptados con exito.</string>
    <string name="permissions_canceled">Permisos denegados con exito.</string>
    <string name="not_emptry">El nombre no puede estar vacío</string>
    <string name="name_small">El nombre debe de contener más de 2 letras</string>
    <string name="successful_add_worker">El trabajador fue añadido con exito</string>
    <string name="error_add_worker">Error: El trabajador no fue añadido correctamente</string>
    <string name="select_salary">Seleccione el salario del jornal</string>
    <string name="edit">Editar</string>
    <string name="successful_edit_worker">El trabajador fue editado con exito</string>
    <string name="error_edit_worker">Error: El trabajador no fue editado correctamente</string>
    <string name="info_worker">Información del Trabajador</string>
    <string name="missis">Faltas y Asistencias</string>
    <string name="attention">Atención</string>
    <string name="all_jornal">Nº jornales: </string>
    <string name="total_money">Dinero ganado: </string>
    <string name="money">Dinero</string>
    <string name="total_jornal">Nº total de jornales</string>
    <string name="successful_remove_jornal">El jornal fue elimidado con exito</string>
    <string name="error_remove_jornal">El jornal no fue elimidado con exito</string>
    <string name="are_sure_jornal">¿Está seguro de que desea borrar este jornal?</string>
    <string name="total_missing">Nº total de faltas</string>
    <string name="successful_remove_missing">La falta fue elimidada con exito</string>
    <string name="error_remove_missing">La falta no fue elimidada con exito</string>
    <string name="are_sure_missing">¿Está seguro de que desea borrar esta falta?</string>
    <string name="total_plot">Nº total de parcelas</string>
    <string name="successful_remove_plot">La parcela fue elimidada con exito</string>
    <string name="error_remove_plot">La parcela no fue elimidada con exito</string>
    <string name="are_sure_plant">¿Está seguro de que desea borrar esta parcela?</string>
    <string name="total_weight">Total recogidos </string>
    <string name="total_kg">Kg recogidos </string>
    <string name="half_efficiency">Rendimiento medio </string>
    <string name="total_weigt">Total kg: </string>
    <string name="total_efficiency">Rendimiento medio: </string>
    <string name="successful_remove_weight">El pesaje fue elimidado con exito</string>
    <string name="error_remove_weight">El pesaje no fue elimidado con exito</string>
    <string name="are_sure_weight">¿Está seguro de que desea borrar este pesaje?</string>
    <string name="successful_remove_type">Este tipo de jornal fue elimidado con exito</string>
    <string name="error_remove_type">Este tipo de jornal no fue elimidado con exito</string>
    <string name="are_sure_type">¿Está seguro de que desea borrar este tipo de jornal?</string>
    <string name="successful_remove_expense">El gasto fue elimidado con exito</string>
    <string name="error_remove_expense">El gasto no fue elimidado con exito</string>
    <string name="are_sure_expense">¿Está seguro de que desea borrar este gasto?</string>
    <string name="total_expense">Nº total de gastos</string>
    <string name="type">Tipo de gasto</string>
    <string name="expenses">Gastos</string>
    <string name="expense">Gasto</string>
    <string name="type_">Tipo</string>
    <string name="euro">€</string>
    <string name="error_expenses">Los simbolos "-" (barrao) o "," (coma) no están permitidos.
                                        \n\t\tUse "." (punto) en su lugar.
    </string>
    <string name="successful_add_expense">El gasto fue añadido con exito</string>
    <string name="error_add_expense">Error al añadir el gasto</string>
    <string name="rb_assist">Ha asistido</string>
    <string name="rb_missing">Ha faltado</string>
    <string name="select_worker">Seleccione Trabajador</string>
    <string name="select_day">Seleccione Día</string>
    <string name="select_assormiss">Seleccione Asistencia o Falta</string>
    <string name="successful_add_jornal">El jornal fue añadido con exito</string>
    <string name="successful_add_miss">La falta fue añadida con exito</string>
    <string name="error_add_jornal">Error al añadir el jornal</string>
    <string name="error_add_miss">Error al añadir la falta</string>
    <string name="assist">Asistencias</string>
    <string name="miss">Faltas</string>
    <string name="plots">Parcelas</string>
    <string name="name_plot">Nombre de la parcela</string>
    <string name="number_plot">Número de olivas</string>
    <string name="weigths">Pesajes</string>
    <string name="plot_exist">Esta parcela ya exite</string>
</resources>