<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home_button"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/options" />

        <item
            android:id="@+id/nav_close_session"
            android:icon="@drawable/off"
            android:title="@string/close" />
    </group>

    <item android:title="@string/add_data">
        <menu>
            <item
                android:id="@+id/add_worker"
                android:icon="@drawable/add_user_button"
                android:title="@string/add_laborer" />
            <item
                android:id="@+id/add_jornal"
                android:icon="@drawable/add_to_queue_button"
                android:title="@string/add_worker_day" />

            <item
                android:id="@+id/add_plot"
                android:icon="@drawable/tree_white"
                android:title="@string/add_plot" />

            <item
                android:id="@+id/add_weight"
                android:icon="@drawable/weight_grisnegro"
                android:title="@string/add_weigth" />

            <item
                android:id="@+id/add_expenses"
                android:icon="@drawable/euro_white"
                android:title="@string/add_expense" />
        </menu>
    </item>

    <item android:title="@string/list">
        <menu>
            <item
                android:id="@+id/list_worker"
                android:icon="@drawable/user"
                android:title="@string/list_worker" />
            <item
                android:id="@+id/list_jornals"
                android:icon="@drawable/calendar_grisnegro"
                android:title="@string/list_jornal" />
            <item
                android:id="@+id/list_missing"
                android:icon="@drawable/missing_grisnegro"
                android:title="@string/list_jornal_missing" />
            <item
                android:id="@+id/list_plots"
                android:icon="@drawable/tree_grisnegro"
                android:title="@string/list_plot" />
            <item
                android:id="@+id/list_weight"
                android:icon="@drawable/weight_grisnegro"
                android:title="@string/list_weight" />
            <item
                android:id="@+id/list_expense"
                android:icon="@drawable/euro_white"
                android:title="@string/expenses" />
            <item
                android:id="@+id/list_margin_benefits"
                android:icon="@drawable/graphic_white"
                android:title="@string/marginbenefits" />
        </menu>
    </item>

</menu>