<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"/>
    <item
        android:id="@+id/action_add_worker"
        android:orderInCategory="101"
        android:title="@string/add_worker"
        android:visible="false"
        android:icon="@drawable/add_user_white" />

    <item
        android:id="@+id/action_add"
        android:orderInCategory="102"
        android:title="@string/add"
        android:visible="false"
        android:icon="@drawable/rounded_add_button_1" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="103"
        android:title="@string/_save"
        android:visible="false" />

    <item
        android:id="@+id/action_discard"
        android:orderInCategory="104"
        android:title="@string/discard"
        android:visible="false" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit"
        android:orderInCategory="105"
        android:title="@string/edit"
        android:visible="false" />

    <item
        android:id="@+id/action_save_edit"
        android:orderInCategory="105"
        android:title="@string/_save"
        android:visible="false" />

</menu>
