<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/LinearListWeight"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/Gris" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/GrisNegro"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tittle_weigths"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/Gris"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/list_plot"
                android:textColor="@color/Gris"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@color/Gris"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ListView
            android:id="@+id/list_view_weigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Gris"
            android:divider="@color/Transparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical">

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/Gris" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/GrisNegro"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/total_weigt"
                    android:textColor="@color/Gris"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.09"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_weights"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="100"
                    android:textColor="@color/Gris"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>